2014-02-13  Larry Campbell <lcampbel@akamai.com>

	* Source/NSCalendarDate.m: Fixup millisecond formatting to match OSX

2014-02-12  Quentin Mathe <quentin.mathe@gmail.com>

	* Tools/gsdoc-1_0_4.dtd: Added new DTD version that declares 'package' 
	visibility as a valid ivar qualifier.
	* Tools/AGSParser.m: Added 'package' visibility parsing.
	* Tools/AGSOutput.m:
	* Tools/autogsdoc.m: 
	* Tools/GNUmakefile.m:
	Updated to refer to the latest DTD version.

2014-02-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Fix standardising a path to use unix separators
	consistently with appending a pathc component ... paths should be
	(as far as possible) portable, and the filesystem representation
	methods convert to backslashes as necessary on windows anyway.

2014-02-03  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/Additions/GSMime.m:
	* Headers/GNUstepBase/GSMime.h:
	Add support for stripping white space between encoded words (RFC2047)

2014-02-02 Yavor Doganov  <yavor@gnu.org>

	* configure.ac: Force use for fake main on kfreebsd to work around bug
	handling large number of arguments.
	* Documentation/coding-standards.texi:
	* Documentation/manual/manual.texi:
	* Tools/cvtenc.1:
	* Tools/pldes.1:
	* Tools/defaults.1:
	* Tools/autogsdoc.1:
	* Tools/gdomap.8:
	Minor cosmetic tweaks

2014-02-02 Riccardo Mottola <rm@gnu.org>

	* Source/NSString.m (stringByResolvingSymlinksInPath)
	On GLIBC and FreeBSD use sysconf(_SC_SYMLOOP_MAX) instead of just
	MAXSYMLINKS. For HURD this is necessary, since the latter is not 
	defined.

2014-01-31  Marcus Mueller <znek@mulle-kybernetik.com>

	* Source/NSUserNotification.m:
	Implemented repetitions, moved "presented" flagging to the appropriate
	method (subclassers may have different opinions about presentation,
	i.e. gnustep-gui might want to prevent presentation if application
	is already frontmost [the OSX behavior]). Improved -description
	(similar to OSX's output, eases cross-platform debugging).